--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -10,18 +10,19 @@ Prefix: "&2&lNick&a&lConomy &8»&r"
 #Um dieses Plugin verwenden zu können brauchst du eine MySQL Datenbank!
 
 Database:
-    username: servershop
-    password: HXQY8TCYCzETXajl
-    database: servershop
+    username: nickconomy
+    password: password
+    database: nickconomy
     host: localhost
     port: '3306'
     options: "?autoReconnect=true&useSSL=false&AllowPublicKeyRetrieval=true&verifyServerCertificate=true"
 
 
 Settings:
-  Tax-Account:
-      AccountName: tax-holder
-      AccountUUID: ef0a45ad-4d2a-4ba9-aaf6-c2a94bb6bd8b
-      Tax-Amount: 5.0
-  DefaultBank:
-      Name: "CultBank"
+    Tax-Account:
+        AccountName: tax-holder
+        AccountUUID: ef0a45ad-4d2a-4ba9-aaf6-c2a94bb6bd8b
+        Tax-Amount: 5.0
+    DefaultBank:
+        Name: "CultBank"
+    InitialBalance: 100.00
